--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   minio:
-    container_name: xr_minio
+    container_name: xr-minio
     image: minio/minio:RELEASE.2022-10-08T20-11-00Z
     ports:
       - "9000:9000"
@@ -16,7 +16,7 @@ services:
       - ./docker/minio/data:/export
 
   postgres:
-    container_name: xr_postgres
+    container_name: xr-postgres
     image: postgres:15
     restart: always
     ports:
@@ -27,4 +27,3 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
